--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -14,6 +14,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ChatServerCommon\ChatServerCommon.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logger\" />
   </ItemGroup>
 
 </Project>
