--- a/ChatServerCommon/ChatServerCommon.csproj
+++ b/ChatServerCommon/ChatServerCommon.csproj
@@ -1,17 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.17.2" />
-    <PackageReference Include="Google.Protobuf.Tools" Version="3.17.2" />
-    <PackageReference Include="Grpc.Core" Version="2.38.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.38.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Google.Protobuf" Version="3.17.2" />
+		<PackageReference Include="Google.Protobuf.Tools" Version="3.17.2" />
+		<PackageReference Include="Grpc.Core" Version="2.38.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.38.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
+	<ItemGroup>
+		<Protobuf Include="Protos/chat.proto" />
+	</ItemGroup>
 </Project>
