--- a/ChatClientCommon/ChatClientCommon.csproj
+++ b/ChatClientCommon/ChatClientCommon.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Protobuf Include="Protos/chat.proto" />
+  </ItemGroup>
+
 </Project>
