--- a/ChatClientWpf/ChatClientWpf.csproj
+++ b/ChatClientWpf/ChatClientWpf.csproj
@@ -65,10 +65,10 @@
     </ApplicationDefinition>
     <Compile Include="ApplicationData\ListToStringConverter.cs" />
     <Compile Include="ApplicationData\TextBlockHelper.cs" />
-    <Compile Include="FontStyle.cs" />
-    <Compile Include="FontWeight.cs" />
+    <Compile Include="FormatEnums\FontStyle.cs" />
+    <Compile Include="FormatEnums\FontWeight.cs" />
     <Compile Include="Models\Message.cs" />
-    <Compile Include="TextDecoration.cs" />
+    <Compile Include="FormatEnums\TextDecoration.cs" />
     <Compile Include="ViewModel\ChatViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="View\ChatView.xaml.cs">
